--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FRC Dashboard</title>
+    <title>The Cougar Optic Board</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-	<div style="display:none">
-    	<img id="field-image" src="Field.png" width="248px" height="500px">
-    </div>
 	<div class="row">
 		<!-- COLUMN 1: Field -->
 		<div class="column">
@@ -17,10 +14,16 @@
 		</div>
 		<!-- COLUMN 2: Timer, Compass,  -->
 		<div class="column">
-			<div id="timer" style="font-size:700%; text-align:center; color:gold;">2:15</div>
+			<div id="timer" class="no-blink" style="font-size:700%; text-align:center;">2:15</div>
 			<div>
 				<svg id="gyro" width="100%" height="50%">
-					<circle cx="50%" cy="43.5%" r="128px" fill="gold"></circle>
+					<defs>
+    					<radialGradient id="gyroGradient">
+      						<stop offset="10%" stop-color="rgba(255, 255, 80, 1)"/>
+      						<stop offset="95%" stop-color="rgba(255, 215, 0, 1)"/>
+    					</radialGradient>
+  					</defs>
+					<circle cx="50%" cy="43.5%" r="128px" fill="url(#gyroGradient)"></circle>
 					<g id="rotation-arm">
 						<rect x="49%" y="7%" width="10px" height="115px" fill="green"></rect>
 						<polygon points="203,35 243,35 223,10" fill="green"></polygon>
