Added PID Toggle Option, Commented RPS out

--- a/src/index.html
+++ b/src/index.html
@@ -76,19 +76,8 @@
 				</div>
 			</div>
 			<!-- PID Tuning -->
-			<div class="pid-tuning-box">
-				<div style="display: block">
-					<label for="pid-input-p" style="font-size: 150%; color: gold;">P = </label>
-					<input type="text" style="font-size: 150%" size = "5" id="pid-input-p">
-				</div>
-				<div style="display: block">
-					<label for="pid-input-i" style="font-size: 150%; color: gold;">I = </label>
-					<input type="text" style="font-size: 150%" size = "5" id="pid-input-i">
-				</div>
-				<div style="display: block">
-					<label for="pid-input-d" style="font-size: 150%; color: gold;">D = </label>
-					<input type="text" style="font-size: 150%" size = "5" id="pid-input-d">
-				</div>
+			<div class="pid-enabled-box">
+				<div id="pid-enabled-text" style="font-size: 300%; text-align: left; color: gold;">PID: Off</div>
 			</div>
 		</div>
 	</div>
