--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 					</g>
 				</svg>
 			</div>
-			<div style="font-size:500%; text-align:center; color:gold;">Team 623</div>
+			<marquee style="font-size:500%; text-align:center; color:gold;">Team 623 Cougar Optic Board</marquee>
 			<div id="robot-status" style="font-size:300%; text-align:center; color:gold;">Disabled</div>
 		</div>
 		<div class="column-other" align="center">
