Fixed initial arm height

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 			<div class="auto-selection-box">
 				<!-- LEFT AUTO OPTIONS -->
 				<div id="auto-left" class="auto-left">
-					<button type="button" id="button-auto-left-choice-easy" class="button-on">Do Easy</button>
+					<button type="button" id="button-auto-left-choice-easy" class="button-on">Auto-Optimize</button>
 					<button type="button" id="button-auto-left-choice-switch" class="button-off">Force Switch</button>
 					<button type="button" id="button-auto-left-choice-scale" class="button-off">Force Scale</button>
 					<button type="button" id="button-auto-left-choice-baseline" class="button-off">Only Baseline</button>
@@ -65,7 +65,7 @@
 				</div>
 				<!-- RIGHT AUTO OPTIONS -->
 				<div id="auto-right" class="auto-right">
-					<button type="button" id="button-auto-right-choice-easy" class="button-on">Do Easy</button>
+					<button type="button" id="button-auto-right-choice-easy" class="button-on">Auto-Optimize</button>
 					<button type="button" id="button-auto-right-choice-switch" class="button-off">Force Switch</button>
 					<button type="button" id="button-auto-right-choice-scale" class="button-off">Force Scale</button>
 					<button type="button" id="button-auto-right-choice-baseline" class="button-off">Only Baseline</button>
@@ -74,10 +74,6 @@
 					<button type="button" id="button-auto-checkbox-enable-opposite" class="button-on">Enable Opposite</button>
 					<button type="button" id="button-auto-checkbox-emergency-no-auto" class="button-off">NO AUTO</button>
 				</div>
-			</div>
-			<!-- PID Tuning -->
-			<div class="pid-enabled-box">
-				<div id="pid-enabled-text" style="font-size: 300%; text-align: left; color: gold;">PID: Off</div>
 			</div>
 		</div>
 	</div>
