Post-Competition Push

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,9 @@
 					<button type="button" id="button-auto-checkbox-emergency-no-auto" class="button-off">NO AUTO</button>
 				</div>
 			</div>
+			<div>
+				<div id="lidar-text" class="no-blink" style="font-size:300%; text-align:center;">LIDAR: Off</div>
+			</div>
 		</div>
 	</div>
 	
